--- a/source/_posts/二分.md
+++ b/source/_posts/二分.md
@@ -19,3 +19,21 @@ category:
 我们可以使用二分来解决.
 
 ## 整数二分
+
+首先依据具体问题,找到二段性质,画出二段空间.
+![](https://dreamend.oss-cn-shanghai.aliyuncs.com/er_fen1.png)
+此时二段分界点即为答案,但此时分界点有两种情况,一是左区间的右顶点,二是右区间的左顶点    
+这里是整数二分和实数二分的最大区别.
+
+由此,代码也有所不同
+~~~c++
+void find()
+{
+	int l = 0;
+	int r = 10000;
+	int mid = l + r >> 1;
+	if(check()) r = mid;
+	else l = mid - 1;
+	
+}
+~~~
