--- a/source/_posts/多线程.md
+++ b/source/_posts/多线程.md
@@ -6,3 +6,109 @@ tags:
 category: 
 - Java
 ---
+
+# 线程
+
+## 进程和线程
+
+进程的概念:    
+>进程是计算机中正在运行的程序的实例。它是计算机操作系统中的一个基本概念，是一个正在执行中的程序、指令序列或者命令集合，也是**分配资源的基本单位**，包括CPU时间、内存空间、输入输出设备等。每个进程都有自己的内存空间、寄存器和运行栈，可以独立运行、占用资源和处理数据，相互之间不会干扰。操作系统通过进程管理器来管理进程，包括创建、调度、暂停、恢复、终止等操作。
+
+线程的概念:    
+>线程是操作系统中**调度的基本单位**，是进程中的执行单元。一个进程可以包含多个线程，这些线程共享进程的资源，包括内存空间、文件描述符表和网络连接等。每个线程有自己的堆栈和程序计数器，可以独立执行，但是它们共享进程的内存空间和系统资源。由于线程可以共享同一份数据，因此在某些情况下使用线程可以提高程序的效率。
+
+两者的区别:
+>资源占用：进程是系统资源分配的基本单位，每个进程都拥有独立的地址空间、文件描述符、打开的文件、网络连接等资源，而线程是进程的执行单元，多个线程共享进程的资源，每个线程只有自己的栈、寄存器和程序计数器等。
+
+>独立性：进程之间是独立的，一个进程的崩溃不会影响到其他进程，而线程共享同一个进程的地址空间，一个线程的崩溃会导致整个进程的崩溃。
+
+>创建销毁：进程的创建和销毁需要较大的系统开销，而线程的创建和销毁则比较轻量级。
+
+>上下文切换：在进程切换时，需要保存和恢复整个进程的上下文信息，包括程序计数器、寄存器、内存映像等，而在线程切换时，只需要保存和恢复线程的上下文信息，比进程切换要快很多。
+
+>通信：进程之间通信需要通过进程间通信机制，比如管道、消息队列、信号量、共享内存等，而线程之间通信则可以直接读写共享内存，因为它们共享同一进程的内存空间。
+
+>综上所述，线程比进程更轻量级，创建和销毁更快，上下文切换更快，但是线程之间的共享资源需要考虑同步和互斥，更容易出现竞态条件等并发问题。而进程之间独立性更强，但是创建和销毁的开销更大。
+
+## JAVA中线程的实现创建
+
+java标准库提供了**Thread类**来表示一个线程    
+
+### 1.继承 Thread 类, 重写 run 方法
+~~~java
+public class MyThread extends Thread{
+
+    @Override
+    public void run() {
+        System.out.println("hello world");
+    }
+
+    public static void main(String[] args) {
+        Thread thread = new MyThread();
+        thread.start();
+    }
+}
+~~~
+### 2.实现 Runnable , 重写 run 方法
+~~~java
+public class MyThread2 implements Runnable {
+
+    @Override
+    public void run() {
+        System.out.println("hello world");
+    }
+
+    public static void main(String[] args) {
+        Thread t = new Thread(new MyThread2());
+        t.start();
+    }
+}
+~~~
+### 3.继承 Thread, 重写 run 方法, 使用匿名内部类
+~~~java
+public class MyThread3 {
+    public static void main(String[] args) {
+        Thread thread = new Thread() {
+            @Override
+            public void run() {
+                System.out.println("hello world"); 
+            }
+        };
+        thread.start();
+    }
+}
+~~~
+### 4.实现 Runnable, 重写 run 方法, 使用匿名内部类
+~~~java
+public class MyThread4 {
+    public static void main(String[] args) {
+        Thread thread = new Thread(new Runnable() {
+
+            @Override
+            public void run() {
+                System.out.println("hello world"); 
+            }
+        });
+        thread.start();
+    }
+}
+~~~
+### 5.使用 lambda 表达式
+~~~java
+public class MyThread5 {
+    public static void main(String[] args) {
+        Thread thread = new Thread(() -> {
+            System.out.println("run");
+        });
+        thread.start();
+    }
+}
+~~~
+
+## Thread类常用方法
+
+>
+
+
+# 线程安全
+
