--- a/source/_posts/多线程.md
+++ b/source/_posts/多线程.md
@@ -12,10 +12,10 @@ category:
 ## 进程和线程
 
 进程的概念:    
->进程是计算机中正在运行的程序的实例。它是计算机操作系统中的一个基本概念，是一个正在执行中的程序、指令序列或者命令集合，也是**分配资源的基本单位**，包括CPU时间、内存空间、输入输出设备等。每个进程都有自己的内存空间、寄存器和运行栈，可以独立运行、占用资源和处理数据，相互之间不会干扰。操作系统通过进程管理器来管理进程，包括创建、调度、暂停、恢复、终止等操作。
+>进程是计算机中正在运行的程序的实例。它是计算机操作系统中的一个基本概念，是一个正在执行中的程序、指令序列或者命令集合，也是<font face = "楷体" color = "red" size = 4>分配资源的基本单位</font>，包括CPU时间、内存空间、输入输出设备等。每个进程都有自己的内存空间、寄存器和运行栈，可以独立运行、占用资源和处理数据，相互之间不会干扰。操作系统通过进程管理器来管理进程，包括创建、调度、暂停、恢复、终止等操作。
 
 线程的概念:    
->线程是操作系统中**调度的基本单位**，是进程中的执行单元。一个进程可以包含多个线程，这些线程共享进程的资源，包括内存空间、文件描述符表和网络连接等。每个线程有自己的堆栈和程序计数器，可以独立执行，但是它们共享进程的内存空间和系统资源。由于线程可以共享同一份数据，因此在某些情况下使用线程可以提高程序的效率。
+>线程是操作系统中<font face = "楷体" color = "red" size = 4>调度的基本单位</font>，是进程中的执行单元。一个进程可以包含多个线程，这些线程共享进程的资源，包括内存空间、文件描述符表和网络连接等。每个线程有自己的堆栈和程序计数器，可以独立执行，但是它们共享进程的内存空间和系统资源。由于线程可以共享同一份数据，因此在某些情况下使用线程可以提高程序的效率。
 
 两者的区别:
 >资源占用：进程是系统资源分配的基本单位，每个进程都拥有独立的地址空间、文件描述符、打开的文件、网络连接等资源，而线程是进程的执行单元，多个线程共享进程的资源，每个线程只有自己的栈、寄存器和程序计数器等。
